--- a/client/src/Workspace/SideBarOption.css
+++ b/client/src/Workspace/SideBarOption.css
@@ -10,6 +10,7 @@
 .sidebar_option:hover {
     opacity:  0.9;
 background-color: rgba(209,210,211,0.2);
+
 }
 
 .sidebaroption_icon{
@@ -19,6 +20,7 @@ background-color: rgba(209,210,211,0.2);
 
 .sidebaroption_channel {
     padding: 10px 0;
+    align-items: center;
 }
 
 .sidebar_option > h3 {
@@ -38,4 +40,20 @@ color: #919193;
 .dms > h3{
     font-weight: bold !important;
     color: white !important;
+}
+
+.button_option{
+  display: none;
+
+
+}
+
+.sidebar_option:hover .button_option{
+    display: inline;
+}
+
+.button_option > .ui.black.button{
+    background-color: transparent !important;
+    float: right;
+    justify-content: flex-end;
 }
