--- a/client/src/Workspace/SideBar.css
+++ b/client/src/Workspace/SideBar.css
@@ -4,8 +4,11 @@
     max-width: 260px;
     color:white; 
     flex: 0.3;
+    overflow: scroll;
 }
-
+.sidebar::-webkit-scrollbar {
+    display: none; /* for Chrome, Safari, and Opera */
+}
 .sidebar_header {
    display: flex;
    border-bottom: 1px solid rgb(145,145,147);
@@ -78,3 +81,11 @@ border-radius: 5px;
     color: #A3A3A6;
 }
 
+.sidebar_user_channel{
+    display: flex;
+    margin: 10px;
+}
+
+.sidebar_user_channel:hover{
+    background-color: #222529;
+}
